--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     x-data="{ openNav: false }"
 >
     <div class="container">
-        <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/ParCFD_logo_tr.png" height="30" width="33"></a>
+        <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid.png" height="30" width="33"></a>
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item">
                 {{ site.title }}
