--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,10 @@
 ---
 ---
 
+$primary: #004080;
+$navbar-background-color: #004080;
+$navbar-item-color: #ffffff;
+$navbar-item-hover-color: #ffcc00;
+$navbar-item-hover-background-color: #003366;
 // Import Main CSS file from theme
 @import "main";
