--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
         {% if site.favicon %}
             href="{{ site.favicon | relative_url }}"
         {% else %}
-            href="{{ site.baseurl }}/img/logo-enes-mid.png"
+            href="{{ site.baseurl }}/img/logo-enes-mid2.png"
         {% endif %}
     >
     <script defer src="https://unpkg.com/alpinejs@3.9.0/dist/cdn.min.js"></script>
