--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
     x-data="{ openNav: false }"
 >
     <div class="container">
-        <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="110" width="auto"></a>
+        <a href="https://enesmerida.unam.mx/#/index" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="100" width="auto"></a>
+        <!-- <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="100" width="auto"></a> -->
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item">
                 {{ site.title }}
