--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         {% if site.cookie_policy %}
             {% include cookie-banner.html %}
         {% endif %}
+        {% include logo-bar.html %}
         {% include header.html %}
         {% unless page.hide_hero %}
             {% include hero.html %}
