--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <!-- <a href="https://enesmerida.unam.mx/#/index" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="10" width="auto"></a> -->
         <!-- <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="100" width="auto"></a> -->
         <div class="navbar-brand">
-            <a href="{{ site.baseurl }}/" class="navbar-item">
+            <a href="{{ site.baseurl }}/" class="navbar-item {% if page.url == '/' %}is-active{% endif %}">
                 {{ site.title }}
             </a>
             <a
