--- a/_includes/logo-bar.html
+++ b/_includes/logo-bar.html
@@ -24,9 +24,17 @@
         </div>
         <div class="navbar-menu" id="navMenu" :class="{ 'is-active': openNav }">
             <div class="navbar-end">
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="mr-3">
                     <!-- Logo de YouTube -->
-                    <img src="{{ site.baseurl}}/img/icon-youtube.png" alt="YouTube Logo" width="30">
+                    <img src="{{ site.baseurl}}/img/icon-youtube.png" alt="YouTube Logo" width="40">
+                </a>
+                <a href="https://github.com/ENES-Merida" target="_blank" rel="noopener noreferrer" class="mr-3">
+                    <!-- Logo de GitHub -->
+                    <img src="{{ site.baseurl}}/img/icon-github.png" alt="GitHub Logo" width="40">
+                </a>
+                <a href="https://www.facebook.com/ENESMERIDAUNAM?locale=es_LA" target="_blank" rel="noopener noreferrer">
+                    <!-- Logo de Facebook -->
+                    <img src="{{ site.baseurl}}/img/icon-facebook.png" alt="Facebook Logo" width="40">
                 </a>
             </div>
         </div>
