--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,28 @@
                 {% endfor %}
             </div>
         {% endif %}
+        <!-- <div class="columns is-multiline"> -->
+            <div class="colum">
+                <div class="content has-text-centered">
+                    <h4>
+                        Escuela Nacional de Estudios
+                        <br/>
+                        Superiores Unidad Mérida
+                    </h4>
+                    <p>
+                        Dirección: Tablaje Catastral N°6998, Carretera Mérida
+                        <br/>
+                        -Tetiz Km. 4.5, Municipio de Ucú, Yucatán, México, C. P.
+                        <br/>
+                        97357 Teléfono: 999 399 0901
+                    </p>
+                </div>
+            </div>
+        <!-- </div> -->
 
         {% include follow.html %}
 
-        <div class="content is-small has-text-centered">
+        <div class="content is-small has-text-centered pt-3">
             <p class="">Theme built by <a href="https://www.csrhymes.com">C.S. Rhymes</a></p>
         </div>
     </div>
