--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,13 @@
         <!-- <a href="{{ site.baseurl }}/" class="navbar-item"><img src="{{ site.baseurl }}/img/logo-enes-mid2.png" height="100" width="auto"></a> -->
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item {% if page.url == '/' %}is-active{% endif %}">
-                {{ site.title }}
+                <!-- {{ site.title }} -->
+                <span class="icon-text">
+                    <span class="icon is-medium">
+                        <i class="fas fa-home fa-xl"></i>
+                    </span>
+                    <!-- <span>Inicio</span> -->
+                </span>
             </a>
             <a
                 role="button"
