--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,13 +1,13 @@
 <section
-    class="hero {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold is-primary"
+    class="hero has-background-grey-light {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold is-primary"
     {% if page.hero_image %}
-        style="background: url('{{ page.hero_image }}') no-repeat center center; height: 35%; background-size: cover;"
+        style="background: url('{{ page.hero_image }}') no-repeat center center; height: 35%; background-size: auto 150%;"
     {% endif %}
 >
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
         <div class="container">
-            <h1 class="title is-1">{{ page.title }}</h1>
-            <p class="subtitle is-3">{{ page.subtitle }}</p>
+            <h1 class="has-text-light title is-size-1-desktop is-size-2-mobile">{{ page.title }}</h1>
+            <p class="has-text-light subtitle is-size-3-desktop is-size-4-mobile">{{ page.subtitle }}</p>
             {% if page.hero_link %}
                 <div class="my-4">
                     <a href="{{ page.hero_link | relative_url }}" class="button is-info is-large">
