--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,11 +34,28 @@
                 <!--a href="{{ site.baseurl }}/" class="navbar-item {% if page.url == "/" %}is-active{% endif %}">Home</a-->
                 {% if site.data.navigation %}
                     {% for item in site.data.navigation %}
+                        {% assign is_active = false %}
+                        {% assign is_parent_active = false %}
+
+                        {% comment %} Verificar si la página actual coincide con el item {% endcomment %}
+                        {% if page.url == item.link %}
+                            {% assign is_active = true %}
+                        {% endif %}
+
+                        {% comment %} Verificar si algún subitem está activo {% endcomment %}
                         {% if item.dropdown %}
-                            <div class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}">
+                            {% for subitem in item.dropdown %}
+                                {% if page.url == subitem.link %}
+                                    {% assign is_parent_active = true %}
+                                    {% break %}
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                        {% if item.dropdown %}
+                            <div class="navbar-item has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %} {% if is_parent_active %}parent-active{% endif %}">
                                 <a
                                     href="{{ item.link | relative_url }}"
-                                    class="navbar-link {% if page.url contains item.link %}is-active{% endif %}"
+                                    class="navbar-link {% if is_active or is_parent_active %}is-active{% endif %}"
                                 >
                                     {{- item.name -}}
                                 </a>
@@ -56,7 +73,7 @@
                         {% else %}
                             <a
                                 href="{{ item.link | relative_url }}"
-                                class="navbar-item {% if item.link == page.url %}is-active{% endif %}"
+                                class="navbar-item {% if is_active %}is-active{% endif %}"
                             >
                                 {{- item.name -}}
                             </a>
