--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -40,37 +40,23 @@ $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
 }
 
 /* Estilos para navbar-link en dropdowns */
-/* .navbar-link:hover {
-  background-color: transparent !important;
-  color: #D59F0F !important;
-} */
-
-/* .navbar-link.is-active {
+.navbar-link:hover {
+  /* background-color: transparent !important; */
   color: #D59F0F;
-  background-color: transparent;
-  border-bottom: 2px solid #D59F0F;
-} */
+}
 
-/* Cuando el dropdown tiene un hijo activo, el padre se ve activo */
-.navbar-item.has-dropdown.parent-active .navbar-link {
+.navbar-link.is-active {
   color: #D59F0F;
   background-color: transparent;
   border-bottom: 2px solid #D59F0F;
 }
 
-/* Mantener hover en dropdowns sin hijos activos */
-/* .navbar-item.has-dropdown:not(.parent-active) .navbar-link:hover {
-  background-color: transparent !important;
-  color: #D59F0F !important;
-  border-bottom: none;
-} */
-
 /* No interferir con el estado activo del padre */
-/* .navbar-item.has-dropdown.parent-active:hover .navbar-link.is-active {
+.navbar-item.has-dropdown.parent-active:hover .navbar-link.is-active {
   color: #D59F0F;
-  border-bottom: 2px solid #D59F0F;
-  background-color: transparent;
-} */
+  /* border-top: 2px solid #D59F0F; */
+  background-color: var(--bulma-primary-20);
+}
 
 // Import Main CSS file from theme
 @import "main";
