--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -28,6 +28,14 @@ $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
   }
 }
 
+.ng_imagen {
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    margin: 0 auto;
+    display: block;
+}
+
 /* Cambia el color del texto al pasar el mouse, sin cambiar el fondo */
 .navbar-item:hover {
   /* background-color: transparent !important; */
