--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <section
     class="hero has-background-grey-light {% if page.hero_height %} {{ page.hero_height }} {% else %} is-medium {% endif %} is-bold is-primary"
     {% if page.hero_image %}
-        style="background: url('{{ page.hero_image }}') no-repeat center center; height: 35%; background-size: cover;"
+        style="background: url('{{ site.baseurl }}/{{ page.hero_image }}') no-repeat center center; height: 35%; background-size: cover;"
     {% endif %}
 >
     <div class="hero-body {% if page.hero_darken %} hero-darken {% endif %}">
