--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,6 +10,27 @@ $primary: #002B7A;
 $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
 
 // Estilo para cada bloque de persona
+.coordinador-block {
+  text-align: center;
+
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  blockquote {
+    border-left: 4px solid #ccc;
+    padding-left: 16px;
+    color: #555;
+    height: auto;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
 .person-block {
   text-align: center;
 
@@ -25,6 +46,26 @@ $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
     padding-left: 16px;
     color: #555;
     height: 140px;
+  }
+}
+.alumnos-block {
+  text-align: center;
+
+  img {
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    margin: 0 auto;
+  }
+
+  blockquote {
+    border-left: 4px solid #ccc;
+    padding-left: 16px;
+    color: #555;
+    height: auto;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
   }
 }
 
