refactor: Se cambia codigo de markdown a html y se cambia nombre de clase de css
Se reescribe codigo de markdown a html. Se cambia el nombre de la clase
de css "ng_imagen" a "academicos_imagen" para mayor claridad.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -70,7 +70,7 @@ $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
   }
 }
 
-.ng_imagen {
+.academicos_imagen {
     width: 100%;
     height: auto;
     max-width: 200px;
