chore: se actualiza la url que envía al github del departamento.

--- a/_includes/logo-bar.html
+++ b/_includes/logo-bar.html
@@ -28,7 +28,7 @@
                     <!-- Logo de YouTube -->
                     <img src="{{ site.baseurl}}/img/icon-youtube.png" alt="YouTube Logo" width="40">
                 </a>
-                <a href="https://github.com/ENES-Merida" target="_blank" rel="noopener noreferrer" class="mr-3">
+                <a href="https://github.com/Matematicas-Aplicadas-y-Geociencias" target="_blank" rel="noopener noreferrer" class="mr-3">
                     <!-- Logo de GitHub -->
                     <img src="{{ site.baseurl}}/img/icon-github.png" alt="GitHub Logo" width="40">
                 </a>
