feat: add Mtro. Cesar Liera to academic staff
- Create individual profile page (planta-academica/mtrocesar.md)
- Add official photo (img/mtroCesarLiera.wepb)
- Update main academic staff page
- Apply necessary CSS styles

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -47,6 +47,7 @@ $container-max-width: 1024px;  // Por ejemplo, un ancho máximo de 960px
     padding-left: 16px;
     color: #555;
     height: 140px;
+    width: 305px;
   }
 }
 .alumnos-block {
