doc: temas propuestos para trabajo de titulacion
- Se agrega informacion sobre los temas propuestos a desarrollar como
trabajo de tesis.
- Se agrega testimonio de trabajo de titulacion en progreso.

--- a/_includes/oferta-titulacion/titulate-con-nosotros.html
+++ b/_includes/oferta-titulacion/titulate-con-nosotros.html
@@ -1,9 +1,4 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-element-bundle.min.js"></script>
-<div>
-  <h3>Titulate con nosotros</h3>
-  <p class="is-size-7">Titúlate con nosotros.</p>
-  <p>Tecnologías con las que trabajamos:</p>
-</div>
 <style>
 swiper-container {
   padding: 2rem 0;
@@ -22,6 +17,34 @@ swiper-slide img {
   display: block;
 }
 </style>
+<div class="content">
+    <p class="is-size-3">Líneas de trabajo o temas que se podrían llevar a cabo:</p>
+    <ul>
+        <li>
+            Predicción Numérica del Tiempo (NWP) – Implementación, calibración y aplicación de modelos meteorológicos para pronóstico atmosférico y estudio de procesos en la capa límite.
+        </li>
+        <li>
+            Procesamiento de Datos Meteorológicos – Análisis estadístico, tratamiento de series temporales y desarrollo de algoritmos para estudio de fenómenos en sistemas atmosféricos y ambientales.
+        </li>
+        <li>
+            Dinámica de Fluidos Computacional (CFD) – Desarrollo y aplicación de metodologías numéricas para análisis de flujos, transferencia de calor y fenómenos de transporte en sistemas diversos.
+        </li>
+        <li>
+            Teledetección para Monitoreo Ambiental – Procesamiento de imágenes satelitales para detección de incendios forestales, seguimiento de temperaturas y análisis de variables atmosféricas.
+        </li>
+    </ul>
+    <p class="is-size-3">Investigación en progreso:</p>
+    <p>
+        Actualmente estamos dirigiendo una tesis sobre el Huracán Milton y su impacto en las costas de Yucatán. Usamos simulaciones computacionales para recrear la peligrosa marea de tormenta que generó este fenómeno meteorológico.
+    </p>
+    <p>
+        Ciencia que protege comunidades - Este trabajo busca entender mejor estos eventos extremos para mejorar los sistemas de alerta temprana en nuestras costas.
+    </p>
+    <p class="has-text-link is-size-5">
+        #Huracanes #CienciasDeLaTierra #Yucatán #Investigación #CambioClimático
+    </p>
+    <p>Tecnologías con las que trabajamos:</p>
+</div>
 <swiper-container loop="true" autoplay="true" slides-per-view="3" centered-slides="true">
   <swiper-slide>
       <img loading="lazy" src="{{ site.baseurl }}/img/tecnologias/wrffire.png" alt="wrf-fire"/>
