chore: informacion de academico y conoce a tu director de titulacion
- se agrega informacion del dr salcedo
- se vincula pagina personal del dr salcedo a pagina de oferta academica

--- a/_includes/oferta-titulacion/titulate-con-nosotros.html
+++ b/_includes/oferta-titulacion/titulate-con-nosotros.html
@@ -43,11 +43,17 @@ swiper-slide img {
     <p class="has-text-link is-size-5">
         #Huracanes #CienciasDeLaTierra #Yucatán #Investigación #CambioClimático
     </p>
-    <p>Tecnologías con las que trabajamos:</p>
+    <p class="is-size-3">Conoce a tu mentor académico:</p>
+    <p>Dr. Erick Salcedo Álvarez</p>
+    <p><em>"Una frase inspiradora o representativa del Dr. Erick"</em></p>
+    <a href="{{ site.baseurl }}/planta-academica/drsalcedo/">Visita mi página personal</a>
+    <br>
+    <br>
+    <p class="is-size-5">Tecnologías con las que trabajamos:</p>
 </div>
 <swiper-container loop="true" autoplay="true" slides-per-view="3" centered-slides="true">
   <swiper-slide>
-      <img loading="lazy" src="{{ site.baseurl }}/img/tecnologias/wrffire.png" alt="wrf-fire"/>
+      <img loading="lazy" src="{{ site.baseurl }}/img/tecnologias/wrf.webp" alt="wrf-fire"/>
   </swiper-slide>
   <swiper-slide>
       <img loading="lazy" src="{{ site.baseurl }}/img/tecnologias/python.svg" alt="python"/>
